--- a/index.html
+++ b/index.html
@@ -1,49 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Under Construction</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: grid;
-      place-items: center;
-      background: linear-gradient(135deg, #0b0f1a, #0a1b22);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: rgba(255,255,255,.92);
-    }
-    .card{
-      width: min(720px, calc(100% - 48px));
-      padding: 36px 32px;
-      border-radius: 22px;
-      background: rgba(255,255,255,.06);
-      border: 1px solid rgba(255,255,255,.12);
-      box-shadow: 0 20px 80px rgba(0,0,0,.45);
-      position: relative;
-      overflow: hidden;
-    }
-    .card::before{
-      content:"";
-      position:absolute;
-      inset:-2px;
-      background: radial-gradient(380px 220px at 20% 20%, rgba(120,200,255,.22), transparent 60%);
-      animation: move 6s ease-in-out infinite;
-      pointer-events:none;
-    }
-    @keyframes move{
-      0%,100% { transform: translate(0,0); }
-      50% { transform: translate(120px, 70px); }
-    }
-    h1{ margin:0; font-size: clamp(28px, 4vw, 44px); }
-    p{ margin:10px 0 0; color: rgba(255,255,255,.65); line-height: 1.5; }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>Under Construction</h1>
-    <p>We’re preparing something clean and focused. Please check back soon.</p>
-  </div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Under Construction</title>
+        <style>
+            body {
+                margin: 0;
+                height: 100vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: linear-gradient(135deg, #1e1e1e, #2b2b2b);
+                font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+                color: white;
+            }
+
+            h1 {
+                font-size: 56px;
+                font-weight: 600;
+                letter-spacing: 4px;
+                text-transform: uppercase;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Under Construction</h1>
+    </body>
 </html>
