--- a/index.html
+++ b/index.html
@@ -1,57 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <title>Under Construction</title>
-
-        <!-- Google Fonts -->
-        <link
-            href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@400;600&family=Space+Grotesk:wght@400;600&family=Cormorant+Garamond:wght@400;600&family=IBM+Plex+Sans:wght@400;600&display=swap"
-            rel="stylesheet"
+        <meta
+            http-equiv="refresh"
+            content="0; url=https://shimulsky.notion.site/lines"
         />
-
-        <style>
-            body {
-                margin: 0;
-                background: #111;
-                color: white;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                transition: background 0.6s ease;
-            }
-
-            h1 {
-                font-size: 48px;
-                font-weight: 600;
-                letter-spacing: 2px;
-                transition: all 0.8s ease;
-            }
-        </style>
+        <title>Redirecting...</title>
     </head>
-
     <body>
-        <h1 id="title">Under Construction</h1>
-
-        <script>
-            const fonts = [
-                "'Playfair Display', serif",
-                "'Inter', sans-serif",
-                "'Space Grotesk', sans-serif",
-                "'Cormorant Garamond', serif",
-                "'IBM Plex Sans', sans-serif",
-            ];
-
-            let index = 0;
-            const title = document.getElementById("title");
-
-            setInterval(() => {
-                index = (index + 1) % fonts.length;
-                title.style.fontFamily = fonts[index];
-            }, 3000);
-        </script>
+        <p>Redirecting...</p>
     </body>
 </html>
